Update poetry.lock and CI workflows for Bandit integration and dependency management
- Updated poetry.lock to reflect the addition of Bandit version 1.8.6 and adjusted package groups for several dependencies to include 'dev'.
- Modified CI workflows to streamline Bandit installation and execution, ensuring it runs with the correct configuration and fallback options.

These changes enhance the security scanning process and improve the reliability of the CI/CD pipeline.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -161,13 +161,12 @@ jobs:
           virtualenvs-in-project: true
 
       - name: Install dependencies
-        run: |
-          poetry install --with dev
-          # Ensure bandit is available (fallback if not in lock file)
-          poetry run pip install bandit
+        run: poetry install --with dev
 
       - name: Run Bandit security scan
-        run: poetry run bandit -r app/ -f json -o bandit-report.json -c .bandit || poetry run bandit -r app/ -f json -o bandit-report.json || true
+        run: |
+          poetry run bandit -r app/ -f json -o bandit-report.json -c .bandit || true
+          poetry run bandit -r app/ -c .bandit || true
 
       - name: Install Semgrep
         run: pip install --upgrade pip && pip install semgrep
