--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,10 +35,7 @@ jobs:
           poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: |
-          poetry install --with dev,ml || poetry install --with dev
-          # Ensure bandit is available (fallback if not in lock file)
-          poetry run pip install bandit
+        run: poetry install --with dev,ml || poetry install --with dev
 
       - name: Run ruff (linting) and black (format check)
         run: |
@@ -50,8 +47,8 @@ jobs:
 
       - name: Run bandit (security linting)
         run: |
-          poetry run bandit -r app/ -f json -o bandit-report.json -c .bandit || poetry run bandit -r app/ -f json -o bandit-report.json
-          poetry run bandit -r app/ -c .bandit || poetry run bandit -r app/
+          poetry run bandit -r app/ -f json -o bandit-report.json -c .bandit
+          poetry run bandit -r app/ -c .bandit
 
       - name: Upload bandit report
         uses: actions/upload-artifact@v4
