Enhance budget management and routing capabilities
- Added new configuration options for intent classification and budget constraints in .env.example.
- Updated README.md to include detailed explanations of the new budget gate and latency priors functionalities.
- Introduced a new test file (test_costs.py) to validate cost estimation logic.
- Enhanced the HeuristicRouter to incorporate budget constraints during model selection, improving cost efficiency.
- Updated models.py to include max_budget field in ChatCompletionRequest for budget tracking.
- Refactored various components to improve logging and debugging for budget-related decisions.

These changes aim to improve the system's ability to manage costs effectively while maintaining performance and user experience.

--- a/.env.example
+++ b/.env.example
@@ -92,6 +92,11 @@ CLASSIFICATION_MODEL=all-MiniLM-L6-v2
 SIMILARITY_THRESHOLD=0.7
 CACHE_EMBEDDINGS=true
 
+# Intent Classifier (Phase 1: Routing Mind)
+ROUTER_INTENT_CLASSIFIER_ENABLED=true
+INTENT_LOW_CONFIDENCE=0.4
+INTENT_MIN_CONF_FOR_DIRECT=0.7
+
 # =============================================================================
 # Cost Management & Budget Configuration
 # =============================================================================
@@ -99,6 +104,10 @@ DEFAULT_DAILY_BUDGET=10.0
 DEFAULT_MONTHLY_BUDGET=100.0
 COST_TRACKING_ENABLED=true
 BUDGET_ALERTS_ENABLED=true
+
+# Budget Gate (Pre-request cost estimation and enforcement)
+# Maximum estimated USD cost per request before budget exceeded error
+# Typical values: 0.05 (conservative), 0.08 (balanced), 0.15 (permissive)
 MAX_ESTIMATED_USD_PER_REQUEST=0.08
 
 # =============================================================================
@@ -165,9 +174,22 @@ DEFAULT_ORGANIZATION_ID=default
 # Audit Logging
 AUDIT_LOGGING_ENABLED=false
 
-# Performance Optimization
+# =============================================================================
+# Cost Estimation & Pricing Configuration
+# =============================================================================
+# Price Table (Source of truth for model pricing)
+# Path to JSON file containing model pricing data in format:
+# {"provider:model": {"input_per_1k_usd": x, "output_per_1k_usd": y}}
+PRICE_TABLE_PATH=./scripts/data/prices.json
+
+# Latency Priors (Time window for latency measurements in seconds)
+# Default: 1800s (30 minutes) - measurements older than this are discarded
 LATENCY_PRIORS_WINDOW_S=1800
+
+# Token Estimation Defaults (Used when tokens not provided in request)
+# Default input tokens for cost estimation
 ESTIMATOR_DEFAULT_TOKENS_IN=400
+# Default output tokens for cost estimation
 ESTIMATOR_DEFAULT_TOKENS_OUT=300
 
 # =============================================================================
@@ -175,6 +197,3 @@ ESTIMATOR_DEFAULT_TOKENS_OUT=300
 # =============================================================================
 # Test Mode (disables external API calls in tests)
 TEST_MODE=false
-
-# Price table configuration
-PRICE_TABLE_PATH=./scripts/data/prices.json
